tests/NormalTests/paczka1/fuzzy1/21430460.err
Error in line 4: BTC A767 90,6
Error in line 5: BTC S459 88,3
Error in line 1: RRnkpDcO S459 4,6
Error in line 6: EhP05Dz1qI9 A767 89,3
Error in line 7: BTC S607 42,3
Error in line 10: EhP05Dz1qI9 S357 44,3
